--- a/INTEX/Web.config
+++ b/INTEX/Web.config
@@ -10,7 +10,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="NorthWest_LabsContext" connectionString="Data Source=rhetticus.database.windows.net;Initial Catalog=Northwest_Labs;Integrated Security=False;User ID=DeganKettles;Password=Anderson1;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    <add name="NorthWest_LabsContext" connectionString="Data Source=rhetticus.database.windows.net;Initial Catalog=Northwest_Labs;Integrated Security=False;User ID=DeganKettles;Password=Anderson1;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 
