--- a/INTEX/INTEX.csproj
+++ b/INTEX/INTEX.csproj
@@ -185,6 +185,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\Lab Photo.jpg" />
+    <Content Include="Content\Images\moretests.jpg" />
+    <Content Include="Content\Images\myfavetest.jpg" />
+    <Content Include="Content\Images\testtube.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
