--- a/INTEX/INTEX.csproj
+++ b/INTEX/INTEX.csproj
@@ -275,6 +275,7 @@
     <Content Include="Views\Home\Confirmation.cshtml" />
     <Content Include="Views\Home\Quote.cshtml" />
     <Content Include="Views\Home\Catalog.cshtml" />
+    <Content Include="Views\Home\EmployeeLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
