--- a/INTEX/INTEX.csproj
+++ b/INTEX/INTEX.csproj
@@ -276,12 +276,10 @@
     <Content Include="Views\Home\Confirmation.cshtml" />
     <Content Include="Views\Home\Quote.cshtml" />
     <Content Include="Views\Home\Catalog.cshtml" />
-
     <Content Include="Views\Home\LoginSing.cshtml" />
     <Content Include="Views\Home\LoginSeat.cshtml" />
-
     <Content Include="Views\Home\EmployeeLogin.cshtml" />
-
+    <Content Include="Views\Home\QuoteA.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
